crates/plotnik-tests/tests/02-parser/recovery_validation/every_unnamed_def_rejected.txt
(first)
(second)
(third)
------------------ DIAGNOSTICS -------------------
error: definition must be named
 --> query.ptk:1:1
  |
1 | (first)
  | ^^^^^^^
  |
help: add a PascalCase definition name and `=` before `(first)`

error: definition must be named
 --> query.ptk:2:1
  |
2 | (second)
  | ^^^^^^^^
  |
help: add a PascalCase definition name and `=` before `(second)`

error: definition must be named
 --> query.ptk:3:1
  |
3 | (third)
  | ^^^^^^^
  |
help: add a PascalCase definition name and `=` before `(third)`
